--- a/home page/index.html
+++ b/home page/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Veepee-Accueil</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
 </head>
 
@@ -34,36 +34,36 @@
 
                     <!-- Menu Items -->
                     <div class="tooltip-item">
-                        <img src="./assets/home.svg" />
+                        <img src="../assets/home.svg" />
                         <h1>Accueil</h1>
                     </div>
                     <hr>
                     <div class="tooltip-item">
-                        <img src="./assets/avatar.svg">
+                        <img src="../assets/avatar.svg">
                         <h1>Mon compte</h1>
                     </div>
                     <div class="tooltip-item">
-                        <img src="./assets/cadeau.svg">
-                      <a href="payement.html" > <h1>Mes commandes</h1></a>
+                        <img src="../assets/cadeau.svg">
+                      <a href="../payement/payement.html" > <h1>Mes commandes</h1></a>
                     </div>
                     <div class="tooltip-item">
-                        <img src="./assets/alert.svg">
+                        <img src="../assets/alert.svg">
                          <h1>Mes communications</h1>
                     </div>
                     <div class="tooltip-item">
-                        <img src="./assets/chat.svg">
+                        <img src="../assets/chat.svg">
                         <h1>Le Club</h1>
                     </div>
 
                     <hr>
                     <div class="tooltip-item">
-                        <img src="./assets/help.svg">
+                        <img src="../assets/help.svg">
                         <h1>Aide et contact</h1>
                     </div>
 
                     <hr>
                     <div class="tooltip-item">
-                        <img src="./assets/mobile.svg">
+                        <img src="../assets/mobile.svg">
                         <h1>VPMobile</h1>
                     </div>
 
@@ -79,7 +79,7 @@
             <!-- Left Section -->
             <div class="left">
                 <div>
-                    <img src="./assets/question.png" class="icon" />
+                    <img src="../assets/question.png" class="icon" />
                     <p class="navp">Qui sommes-nous?</p>
                 </div>
                 <button class="button">S'identifier</button>
@@ -114,7 +114,7 @@
             <div class="search-container">
                 <input type="text" class="search-bar" placeholder="Rechercher une marque, un produit..." />
                 <button class="search-button">
-                    <img src="./assets/search.png" alt="Logo" class="logosearch" />
+                    <img src="../assets/search.png" alt="Logo" class="logosearch" />
                 </button>
             </div>
         </div>
@@ -346,21 +346,21 @@
                 <ul>
                     <div class="payment-section">
                         <div class="payment-icons">
-                            <img class="footericon" src="./assets/carte-de-credit.png" alt="MasterCard" />
-                            <img class="footericon" src="./assets/visa.png" alt="Visa" />
-                            <img class="footericon" src="./assets/carte.png" alt="Google Wallet (Floa)"></li>
-                            <img class="footericon" src="./assets/amex.png" alt="American Express (Amex)">
+                            <img class="footericon" src="../assets/carte-de-credit.png" alt="MasterCard" />
+                            <img class="footericon" src="../assets/visa.png" alt="Visa" />
+                            <img class="footericon" src="../assets/carte.png" alt="Google Wallet (Floa)"></li>
+                            <img class="footericon" src="../assets/amex.png" alt="American Express (Amex)">
                         </div>
                     </div>
                 </ul>
-                <li> <img class="footericon" src="./assets/oany.png" alt="Google Wallet (Floa)">
-                    <img class="footericon" src="./assets/pay-pal.png" alt="PayPal">
+                <li> <img class="footericon" src="../assets/oany.png" alt="Google Wallet (Floa)">
+                    <img class="footericon" src="../assets/pay-pal.png" alt="PayPal">
 
 
-                    <img class="footericon" src="./assets/symboles.png" alt="Klarna">
-                    <img class="footericon" src="./assets/apple-paie.png" alt="Apple Pay (iOS Pay)">
+                    <img class="footericon" src="../assets/symboles.png" alt="Klarna">
+                    <img class="footericon" src="../assets/apple-paie.png" alt="Apple Pay (iOS Pay)">
 
-                <li> <img class="footericon" src="./assets/Logo-Floa-png.png" alt="Discover (Oney)"></li>
+                <li> <img class="footericon" src="../assets/Logo-Floa-png.png" alt="Discover (Oney)"></li>
 
                 </li>
             </div>
