--- a/parrainage/parrainage.html
+++ b/parrainage/parrainage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veepee Payement</title>
-    <link rel="stylesheet" href="parrainage.css" />
+    <link rel="stylesheet" href="./parrainage.css" />
 </head>
 
 <body>
@@ -30,38 +30,38 @@
 
                         <!-- Menu Items -->
                         <div class="tooltip-item">
-                            <img src="./assets/home.svg" />
+                            <img src="../assets/home.svg" />
                             <h1>Accueil</h1>
                         </div>
                         <hr>
                         <div class="tooltip-item">
-                            <img src="./assets/avatar.svg">
+                            <img src="../assets/avatar.svg">
                             <h1>Mon compte</h1>
                         </div>
                         <div class="tooltip-item">
-                            <img src="./assets/cadeau.svg">
+                            <img src="../assets/cadeau.svg">
                             <a href="payement.html">
                                 <h1>Mes commandes</h1>
                             </a>
                         </div>
                         <div class="tooltip-item">
-                            <img src="./assets/alert.svg">
+                            <img src="../assets/alert.svg">
                             <h1>Mes communications</h1>
                         </div>
                         <div class="tooltip-item">
-                            <img src="./assets/chat.svg">
+                            <img src="../assets/chat.svg">
                             <h1>Le Club</h1>
                         </div>
 
                         <hr>
                         <div class="tooltip-item">
-                            <img src="./assets/help.svg">
+                            <img src="../assets/help.svg">
                             <h1>Aide et contact</h1>
                         </div>
 
                         <hr>
                         <div class="tooltip-item">
-                            <img src="./assets/mobile.svg">
+                            <img src="../assets/mobile.svg">
                             <h1>VPMobile</h1>
                         </div>
 
@@ -75,18 +75,18 @@
 
                 <!-- Veepee Logo -->
                 <div class="veeplogoo">
-                    <img src="./assets/midlelogo.jpg" alt="logo" class="logoo" id="butterfly" />
+                    <img src="../assets/midlelogo.jpg" alt="logo" class="logoo" id="butterfly" />
                 </div>
 
                 <!-- Left Section -->
                 <div class="leftt">
                     <div class="iconsnav">
-                        <img src="./assets/parrainage.svg" class="iconn" />
+                        <img src="../assets/parrainage.svg" class="iconn" />
                         <p class="navpp">Parrainage</p>
                     </div>
                     <button class="buttonn">
                         <div class="buttonpanier">
-                            <img src="./assets/panier.svg" id="my_image">
+                            <img src="../assets/panier.svg" id="my_image">
                             Panier
                         </div>
                     </button>
@@ -215,16 +215,16 @@
 
             <div class="rightsidefooter">
                 <div class="socialmedia">
-                    <img src="./assets/instgram.svg" alt="" class="iconsosial">
+                    <img src="../assets/instgram.svg" alt="" class="iconsosial">
 
                     <p class="footersocial">Instagram</p>
                 </div>
                 <div class="socialmedia">
-                    <img src="./assets/fcb.svg" alt="" class="iconsosial">
+                    <img src="../assets/fcb.svg" alt="" class="iconsosial">
                     <p class="footersocial">Facebook</p>
                 </div>
                 <div class="socialmedia">
-                    <img src="./assets/youtube.svg" alt="" class="iconsosial">
+                    <img src="../assets/youtube.svg" alt="" class="iconsosial">
                     <p class="footersocial">Youtube</p>
                 </div>
 
@@ -289,21 +289,21 @@
                 <ul>
                     <div class="payment-section">
                         <div class="payment-icons">
-                            <img class="footericon" src="./assets/carte-de-credit.png" alt="MasterCard" />
-                            <img class="footericon" src="./assets/visa.png" alt="Visa" />
-                            <img class="footericon" src="./assets/carte.png" alt="Google Wallet (Floa)"></li>
-                            <img class="footericon" src="./assets/amex.png" alt="American Express (Amex)">
+                            <img class="footericon" src="../assets/carte-de-credit.png" alt="MasterCard" />
+                            <img class="footericon" src="../assets/visa.png" alt="Visa" />
+                            <img class="footericon" src="../assets/carte.png" alt="Google Wallet (Floa)"></li>
+                            <img class="footericon" src="../assets/amex.png" alt="American Express (Amex)">
                         </div>
                     </div>
                 </ul>
-                <li> <img class="footericon" src="./assets/oany.png" alt="Google Wallet (Floa)">
-                    <img class="footericon" src="./assets/pay-pal.png" alt="PayPal">
+                <li> <img class="footericon" src="../assets/oany.png" alt="Google Wallet (Floa)">
+                    <img class="footericon" src="../assets/pay-pal.png" alt="PayPal">
 
 
-                    <img class="footericon" src="./assets/symboles.png" alt="Klarna">
-                    <img class="footericon" src="./assets/apple-paie.png" alt="Apple Pay (iOS Pay)">
+                    <img class="footericon" src="../assets/symboles.png" alt="Klarna">
+                    <img class="footericon" src="../assets/apple-paie.png" alt="Apple Pay (iOS Pay)">
 
-                <li> <img class="footericon" src="./assets/Logo-Floa-png.png" alt="Discover (Oney)"></li>
+                <li> <img class="footericon" src="../assets/Logo-Floa-png.png" alt="Discover (Oney)"></li>
 
                 </li>
             </div>
