--- a/payement/payement.html
+++ b/payement/payement.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veepee Payement</title>
-    <link rel="stylesheet" href="payement.css" />
+    <link rel="stylesheet" href="./payement.css" />
 </head>
 
 <body>
@@ -33,38 +33,38 @@
 
                         <!-- Menu Items -->
                         <div class="tooltip-item">
-                            <img src="./assets/home.svg" />
+                            <img src="../assets/home.svg" />
                             <h1>Accueil</h1>
                         </div>
                         <hr>
                         <div class="tooltip-item">
-                            <img src="./assets/avatar.svg">
+                            <img src="../assets/avatar.svg">
                             <h1>Mon compte</h1>
                         </div>
                         <div class="tooltip-item">
-                            <img src="./assets/cadeau.svg">
+                            <img src="../assets/cadeau.svg">
                             <a href="payement.html">
                                 <h1>Mes commandes</h1>
                             </a>
                         </div>
                         <div class="tooltip-item">
-                            <img src="./assets/alert.svg">
+                            <img src="../assets/alert.svg">
                             <h1>Mes communications</h1>
                         </div>
                         <div class="tooltip-item">
-                            <img src="./assets/chat.svg">
+                            <img src="../assets/chat.svg">
                             <h1>Le Club</h1>
                         </div>
 
                         <hr>
                         <div class="tooltip-item">
-                            <img src="./assets/help.svg">
+                            <img src="../assets/help.svg">
                             <h1>Aide et contact</h1>
                         </div>
 
                         <hr>
                         <div class="tooltip-item">
-                            <img src="./assets/mobile.svg">
+                            <img src="../assets/mobile.svg">
                             <h1>VPMobile</h1>
                         </div>
 
@@ -76,27 +76,27 @@
 
                 <!-- Veepee Logo -->
                 <div class="veeplogoo">
-                    <img src="./assets/midlelogo.jpg" alt="logo" class="logoo" id="butterfly" />
+                    <img src="../assets/midlelogo.jpg" alt="logo" class="logoo" id="butterfly" />
                 </div>
 
                 <!-- Left Section -->
                 <div class="leftt">
                     <div class="iconsnav">
-                        <img src="./assets/parrainage.svg" class="iconn" />
-                        <a href="parrainage.html">
+                        <img src="../assets/parrainage.svg" class="iconn" />
+                        <a href="../parrainage/parrainage.html">
                             <p class="navpp">Parrainage</p>
                         </a>
                     </div>
                     <div class="iconsnav">
-                        <img src="./assets/question.svg" class="iconn" />
-                        <a href="quisommenous.html">
+                        <img src="../assets/question.svg" class="iconn" />
+                        <a href="../qui somme nous/quisommenous.html">
                             <p class="navpp">Qui sommes-nous?</p>
                         </a>
                     </div>
 
                     <button class="buttonn">
                         <div class="buttonpanier">
-                            <img src="./assets/panier.svg" id="my_image">
+                            <img src="../assets/panier.svg" id="my_image">
                             Panier
                         </div>
                     </button>
@@ -154,19 +154,19 @@
             <p class="titlefoter">Votre shopping 24h/24 en toute sérénité</p>
             <section class="footercontainer">
                 <div class="footeritem">
-                    <img src="./assets/retour.svg" />
+                    <img src="../assets/retour.svg" />
                     <p class="footerp">Retour et remboursement faciles</p>
                 </div>
                 <div class="footeritem">
-                    <img src="./assets/hands.svg" />
+                    <img src="../assets/hands.svg" />
                     <p class="footerp">Un service client à votre écoute</p>
                 </div>
                 <div class="footeritem">
-                    <img src="./assets/" />
+                    <img src="../assets/" />
                     <p class="footerp">Paiement 100 % sécurisé</p>
                 </div>
             </section>
-            <img src="./assets/midlelogo.jpg" class="logo" />
+            <img src="../assets/midlelogo.jpg" class="logo" />
         </div>
 
     </footer>
