--- a/detailproduit/detailproduit.html
+++ b/detailproduit/detailproduit.html
@@ -134,7 +134,7 @@
        <main>
         <section>
            <div class="cardonee">
-            <div class="product-cardd">
+           <a href="../product/product.html"> <div class="product-cardd">
                 
                 <h2>1 produit</h2>
                 <div style="display: flex;justify-content: baseline;">
@@ -164,7 +164,7 @@
                     
                </div>
             </div>
-            </div>
+            </div></a>
               </div>
 
             </section>
