--- a/detailproduit/detailproduit.html
+++ b/detailproduit/detailproduit.html
@@ -35,7 +35,7 @@
                         </div>
                         <div class="tooltip-item">
                             <img src="../assets/cadeau.svg">
-                            <a href="payement.html">
+                            <a href="../payement/payement.html">
                                 <h1>Mes commandes</h1>
                             </a>
                         </div>
