--- a/detailproduit/detailproduit.html
+++ b/detailproduit/detailproduit.html
@@ -189,7 +189,8 @@
                     <a href="" class="ahref">Ajouter</a>
                   </p>
                  
-                <button >Valider mon panier</button>
+                <a href="../valider mon panier/valider.html"><button >Valider mon panier</button>
+               </a>
                <br>
                 <a href="" class="ahreffh">Ou poursuivre les achats</a>
           
