--- a/valider payement/validpay.html
+++ b/valider payement/validpay.html
@@ -77,19 +77,41 @@
         <div class="cardtow">
           <div class="product-card">
              
-             <h4>Livraison à</h4>
-             <div>
-                <div style="display: flex;align-self: baseline;">
+             <h3>Livraison à</h3>
+             <div >
+                <div style="display: flex;align-self: baseline; margin-top: 5px;">
                    <img src="../assets/home.svg" alt="">
-                   <h3 >wided Boukouba</h3>  <a href="" class="ahref">Changer</a>
+                   <h4 style="margin-left: 8px;" >wided Boukouba</h4>  <a href="" class="ahref">Changer</a>
                 </div>
-
-                <p>rue de l'école de médecine,12, 2, Hey </p>
-                <p>75006 paris</p>
-                <h4>Tél. 0145492503</h4>
+                   <div class="coord">
+                     <p style="line-height: 20px; padding: 0; margin: 0;" >rue de l'école de médecine,12, 2, Hey </p>
+                     <p style="line-height: 20px; padding: 0; margin: 0;">75006 paris</p>
+                     <p style="line-height: 20px; padding: 0; margin: 0;">Tél. 0145492503</p>
             </div>
-             <section style="width: 400px; height: 100px; border: 1px solid rgb(188, 29, 66); border-radius: 10px;">
+            </div>
+             <section class="midelcart">
+               <div>
 
+                <p style=" padding: 0; margin: 0;">Livraison estimée</p>
+                <div style="display: flex;">
+                    <img src="../assets/calender.svg" alt="" style="align-self: baseline; width: 20px;">
+                    <p style=" padding: 0; margin: 0;">Mar. 26 Sept.Ven. 29 Sept.</p>
+                    
+                </div>
+                <div style="display: flex;">
+                <img src="../assets/collisimo.svg" alt="logo" style="align-self: baseline; width: 20px;">
+                <p style=" padding: 0; margin: 0;">Collisimo</p>
+            </div>
+            </div>
+
+               <hr >
+
+               <div>
+                <p style=" padding: 0; margin: 0;">6,80 €
+                    <input type="radio"  value="5" checked=""></p>
+                <p style=" padding: 0; margin: 0;">0,43 kg CO₂
+                </p>
+               </div>
              </section>
              <hr class="hr1">
              <div>
