--- a/home page/index.html
+++ b/home page/index.html
@@ -73,7 +73,7 @@
 
             <!-- Veepee Logo -->
             <div class="veeplogo">
-                <img src="assets/logovente.jpg" alt="logo" class="logo" id="butterfly" />
+                <img src="../assets/logovente.jpg" alt="logo" class="logo" id="butterfly" />
             </div>
 
             <!-- Left Section -->
