--- a/home page/index.html
+++ b/home page/index.html
@@ -78,7 +78,7 @@
 
             <!-- Left Section -->
             <div class="left">
-                <div style="width: 100%;">
+                <div >
                     <img src="../assets/question.png" class="icon" />
                     <p class="navp">Qui sommes-nous?</p>
                 </div>
