--- a/compte/compte.html
+++ b/compte/compte.html
@@ -27,10 +27,10 @@
 
                     <!-- Tooltip for Menu -->
                     <span class="tooltiptext">
-                        <h2>Bien le bonjour</h2>
+                        <!-- <h2>Bien le bonjour</h2>
                         <p>Déja membre Veepee?</p>
                         <button class="whitebutton">S'identifier</button>
-                        <hr />
+                        <hr /> -->
 
                         <!-- Menu Items -->
                         <div class="tooltip-item">
@@ -67,6 +67,11 @@
                         <div class="tooltip-item">
                             <img src="../assets/mobile.svg">
                             <h1>VPMobile</h1>
+                        </div>
+                        <hr>
+                        <div class="tooltip-item">
+                            <img src="../assets/logout.svg">
+                            <h1>Déconnexion</h1>
                         </div>
 
                         <!-- Add more menu items here -->
@@ -191,16 +196,15 @@
                     <h4>FACEBOOK</h4>
                     <p>Votre compte Facebook n'est pas associé à votre compte Vente.</p>
                 </div>
-                <p style="font-size: 11px; color: rgba(153, 152, 152, 0.925); line-height: 20px;" class="comptpara">Vente-Privee.com est le responsable du traitement de vos données personnelles. Les informations collectées ci-dessus sont utilisées <br> pour: 
+                <p class="comptpara">Vente-Privee.com est le responsable du traitement de vos données personnelles. Les informations collectées ci-dessus sont utilisées pour: 
                     <br>
 
                     -Gérer l’accès à notre site et à nos ventes, l’envoi de nos emails d’informations sur nos ventes et la passation de vos commandes. Sous réserve de vos choix, ces données seront également utilisées pour vous adresser des communications sur nos nouveautés, <br> bons plans et jeux-concours et/ou pourront être utilisées par nos partenaires afin de vous adresser des publicités personnalisées si vous avez exprimé ce souhait lors de votre inscription.  <br>
-                     Vous pourrez modifier ou compléter ces informations à tout moment dans la rubrique « Mon Compte/ <br> Mon profil ».
+                     Vous pourrez modifier ou compléter ces informations à tout moment dans la rubrique « Mon Compte/ Mon profil ».
                     <br>
                     -La livraison de vos commandes. Vous pouvez à tout moment modifier ou supprimer ces données via la rubrique « Mon Compte/ Mon carnet d’adresses » de votre compte Membre.
                     <br>
-                    
-                    -Au paiement de votre commande. Vous pouvez choisir d’enregistrer votre carte bancaire afin de faciliter vos achats ultérieurs en cochant la case prévue à cet effet. Vous pouvez à tout moment modifier ou supprimer ces données via l’onglet « Mon Compte/ Mes cartes bancaires » de votre compte Membre (sur version Desktop uniquement). Ces données sont hébergées par des prestataires de Vente-Privee.com qui n’a en aucun cas accès à celles-ci à l’exception des 6 premiers et des 4 derniers chiffres de votre carte bancaire permettant d’identifier votre carte dans votre espace Membre. <br> Votre cryptogramme n’est en aucun <br> cas conservé par Vente-Privee.com ou ses prestataires.</p>
+                    -Au paiement de votre commande. Vous pouvez choisir d’enregistrer votre carte bancaire afin de faciliter vos achats ultérieurs en cochant la case prévue à cet effet. Vous pouvez à tout moment modifier ou supprimer ces données via l’onglet « Mon Compte/ Mes cartes bancaires » de votre compte Membre (sur version Desktop uniquement). Ces données sont hébergées par des prestataires de Vente-Privee.com qui n’a en aucun cas accès à celles-ci à l’exception des 6 premiers et des 4 derniers chiffres de votre carte bancaire permettant d’identifier votre carte dans votre espace Membre. <br> Votre cryptogramme n’est en aucun cas conservé par Vente-Privee.com ou ses prestataires.</p>
                </section>
                </main>
 
