--- a/payement/payement.html
+++ b/payement/payement.html
@@ -162,7 +162,7 @@
                     <p class="footerp">Un service client à votre écoute</p>
                 </div>
                 <div class="footeritem">
-                    <img src="../assets/" />
+                    <img src="../assets/payement.svg" />
                     <p class="footerp">Paiement 100 % sécurisé</p>
                 </div>
             </section>
