--- a/parrainage/parrainage.html
+++ b/parrainage/parrainage.html
@@ -124,6 +124,9 @@
     <header>
 
     </header>
+
+    <!------------------------main--------------------->
+    <main>
     <div class="container">
         <div class="card">
             <div class="cardcontainer">
@@ -138,7 +141,7 @@
                 <label for="username">Lien à partager</label>
 
                 <input type="text" id="username" name="username"
-                    placeholder="https://www.veepee.fr/gr/registration?mgmcode=A29A6E6B">
+                    placeholder="https://www.veepee.fr/gr/registration?mgmcode=A29A6E6B" >
                 <button onclick="copyPlaceholder()" class="inputbutton"> Copier </button>
             </div>
             <div class="butonline">
@@ -192,6 +195,7 @@
         </div>
 
     </section>
+</main>
 
 
     <!-------footer------>
